# benchmark-elementary-functions

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  log.cpp  main.cpp  plot.ipynb  sincos.cpp
inc/: logarithms.h  sincos.h  utils.h
